--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
 * {
     font-family: "Open Sans", sans-serif;
-    background: #09072a;
     overflow: hidden;
+}
+
+#canvas1 {
+    background: #09072a;
 }
 
 .outerDiv {
@@ -16,4 +19,9 @@
     background: #020020;
     height: 100%;
     width: 86.5vw;
+}
+
+.profile-pic {
+    /* box-shadow: #6D00FF 0px 5px 15px; */
+    box-shadow: #6D00FF 0px 1px 1px 0px inset, #6D00FF 0px 15px 30px -20px, #6D00FF 0px 10px 50px -30px;
 }
