--- a/src/App.css
+++ b/src/App.css
@@ -13,10 +13,11 @@
 
 .innerDiv {
     position: absolute;
-    top: 40px;
+    top: 0;
     left: 100px;
-    color: #6D00FF;
-    background: #020020;
+    color: rgb(14 165 233);
+    /* background: #020020; */
+    background: transparent;
     height: 100%;
     width: 86.5vw;
 }
@@ -24,12 +25,12 @@
 .profile-pic {
     /* box-shadow: #6D00FF 0px 5px 15px; */
     /* box-shadow: #6D00FF 0px 1px 1px 0px inset, #6D00FF 0px 15px 30px -20px, #6D00FF 0px 10px 50px -30px; */
-    box-shadow: 2px 2px 15px #6D00FF;
+    box-shadow: 2px 2px 15px rgb(14 165 233);
 }
 
 .contact-btn {
     /* box-shadow: #6D00FF 0px 1px 1px 0px inset, #6D00FF 0px 15px 30px -20px, #6D00FF 0px 10px 50px -30px; */
-    box-shadow: 2px 2px 10px #6D00FF;
+    box-shadow: 2px 2px 10px rgb(14 165 233);
 }
 
 
@@ -70,8 +71,8 @@
     position: relative;
     border-radius: 10px;
     margin-bottom: 40px;
-    border: 2px solid #091d60;
-    box-shadow: 2px 2px 20px 5px #091d60;
+    /* border: 2px solid #091d60; */
+    box-shadow: 2px 2px 20px 5px rgb(14 165 233);
 }
 
 .timeline-item-left .timeline-content {
@@ -88,7 +89,7 @@
     width: 20px;
     height: 20px;
     right: 40px;
-    background-color: #6D00FF;
+    background-color: rgb(14 165 233);
     border: 4px solid #091d60;
     top: 15px;
     border-radius: 50%;
@@ -103,5 +104,18 @@
 .brand,
 .navele,
 .check {
-    text-shadow: 2px 2px 20px #6D00FF;
+    text-shadow: 2px 2px 20px rgb(14 165 233);
+}
+
+.skill-img {
+    box-shadow: 1px 1px 5px 2px rgb(14 165 233);
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 40px;
+}
+
+.skill-div {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 870px;
 }
