--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,7 @@
     background: transparent;
     height: 100%;
     width: 100%;
+    /* overflow-x: hidden; */
 }
 
 .profile-pic {
@@ -100,6 +101,50 @@
     left: -10px;
 }
 
+@media (max-width: 768px) {
+    .timeline {
+        padding-left: 30px;
+        /* To shift the timeline to the left */
+    }
+
+    .timeline::after {
+        left: 15%;
+        /* Shift the vertical line to the left */
+        margin-left: 0;
+        /* Align the line with the dots to the left side */
+    }
+
+    .timeline-item {
+        width: 60%;
+        /* Make items take full width */
+        padding: 10px 20px;
+        /* Adjust padding for smaller screens */
+    }
+
+    .timeline-item-left .timeline-content,
+    .timeline-item-right .timeline-content {
+        transform: translateX(50%);
+        /* Remove X-axis transform */
+        margin-left: auto;
+        margin-right: 0;
+        /* Align content to the right */
+    }
+
+    .time-cont-2 {
+        left: 0;
+    }
+
+    .timeline-item::before {
+        left: 14%;
+        /* Position dots along the left edge */
+        right: auto;
+        transform: translateX(0);
+        height: 22px;
+        width: 22px;
+        /* Align dots correctly */
+    }
+}
+
 .headings,
 .brand,
 .navele,
@@ -125,6 +170,7 @@
     border-radius: 10px;
     width: 300px;
     background-color: #090731;
+    height: 450px;
 }
 
 .inputs {
@@ -146,3 +192,10 @@
 /* .footer-div {
     box-shadow: 1px 1px 4px 5px rgb(14 165 233);
 } */
+
+.footer-div {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+}
