--- a/src/App.css
+++ b/src/App.css
@@ -76,6 +76,7 @@
     box-shadow: 2px 2px 20px 5px rgb(14 165 233);
 }
 
+
 .timeline-item-left .timeline-content {
     transform: translateX(-60%);
 }
@@ -152,11 +153,48 @@
     text-shadow: 2px 2px 20px rgb(14 165 233);
 }
 
+@keyframes float {
+
+    0%,
+    100% {
+        transform: translateY(0);
+        /* Starting and ending at the initial position */
+    }
+
+    50% {
+        transform: translateY(-5px);
+        /* Moves the image up by 10px */
+    }
+}
+
+@keyframes float2 {
+
+    0%,
+    100% {
+        transform: translateY(-5px);
+        /* Starting and ending at the initial position */
+    }
+
+    50% {
+        transform: translateY(0px);
+        /* Moves the image up by 10px */
+    }
+}
+
 .skill-img {
     box-shadow: 1px 1px 5px 2px rgb(14 165 233);
     margin-left: 20px;
     margin-right: 20px;
     margin-bottom: 40px;
+    animation: float 3s ease-in-out infinite;
+}
+
+.skill-img2 {
+    box-shadow: 1px 1px 5px 2px rgb(14 165 233);
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 40px;
+    animation: float2 3s ease-in-out infinite;
 }
 
 .skill-div {
@@ -170,7 +208,7 @@
     border-radius: 10px;
     width: 300px;
     background-color: #090731;
-    height: 450px;
+    height: 480px;
 }
 
 .inputs {
@@ -193,9 +231,65 @@
     box-shadow: 1px 1px 4px 5px rgb(14 165 233);
 } */
 
-.footer-div {
+/* .footer-div {
     position: absolute;
     bottom: 0;
     left: 0;
     width: 100%;
+} */
+
+.fade-in {
+    opacity: 0;
+    transition: opacity 0.7s ease-in-out;
+    text-shadow: 1px 1px 5px rgb(14 165 233);
+}
+
+.fade-in-visible {
+    text-shadow: 1px 1px 5px rgb(14 165 233);
+    opacity: 1;
+}
+
+
+
+.project-inside {
+    position: relative;
+    overflow: hidden;
+    transition: all 0.5s ease;
+}
+
+.project-inside .project-content {
+    transition: filter 0.5s ease;
+}
+
+.project-inside .project-link {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #090731;
+    /* Semi-transparent overlay */
+    opacity: 0;
+    /* Hidden by default */
+    transition: opacity 0.5s ease;
+}
+
+.project-inside .project-link a {
+    color: white;
+    font-size: 18px;
+    text-decoration: none;
+    z-index: 10;
+}
+
+.project-inside:hover .project-content {
+    filter: blur(4px);
+    /* Blur content on hover */
+}
+
+.project-inside:hover .project-link {
+    opacity: 0.7;
+    /* Show the link overlay on hover */
 }
